--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <main>
 
         <header class="header">
-            <div class="row">
+            <div class="row header__row">
                 <a href="#" title="Logo" target="_blank" rel="noopener noreferrer">
                     <svg class="header__logo" width="110" height="68" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 110.56 68.03">
@@ -103,19 +103,22 @@
                         </g>
                     </svg>
                 </a>
-                <nav class="nav">
-                    <a href="#" class="nav__a" title="¿Qué hacemos?" rel="noopener noreferrer">¿Qué hacemos?</a>
-                    <a href="#" class="nav__a" title="¿Cómo lo hacemos?" rel="noopener noreferrer">¿Cómo lo hacemos?</a>
-                    <a href="#" class="nav__a" title="¿En qué creemos?" rel="noopener noreferrer">¿En qué creemos?</a>
-                    <a href="#" class="nav__a" title="¿Quiénes somos?" rel="noopener noreferrer">¿Quiénes somos?</a>
-                    <a href="#" class="nav__a" title="Libros. " rel="noopener noreferrer">Libros. </a>
+                <nav class="header__nav">
+                    <a href="#" class="header__nav__a" title="¿Qué hacemos?" rel="noopener noreferrer">¿Qué hacemos?</a>
+                    <a href="#" class="header__nav__a" title="¿Cómo lo hacemos?" rel="noopener noreferrer">¿Cómo lo
+                        hacemos?</a>
+                    <a href="#" class="header__nav__a" title="¿En qué creemos?" rel="noopener noreferrer">¿En qué
+                        creemos?</a>
+                    <a href="#" class="header__nav__a" title="¿Quiénes somos?" rel="noopener noreferrer">¿Quiénes
+                        somos?</a>
+                    <a href="#" class="header__nav__a" title="Libros. " rel="noopener noreferrer">Libros. </a>
                 </nav>
             </div>
         </header>
 
         <section class="section_hero">
-            <div class="row">
-                <span class="setion_hero__title">SO WHAT?</span>
+            <div class="row ">
+                <span class="section_hero__title">SO WHAT?</span>
             </div>
         </section>
 
@@ -125,6 +128,51 @@
                 <h2 class="section_about__title">Consultoría estratégica basada en evidencias</h2>
             </div>
         </section>
+
+
+        <footer class="footer">
+            <div class="row footer-row">
+                <div class="footer__row">
+                    <div class="footer__col">
+                        <h4 class="footer__title">Contact us</h4>
+                    </div>
+                    <div class="footer__col">
+                        <a href="#" class="footer__lkn" target="_blank"
+                            rel="noopener noreferrer">info@consultoraw.com.ar</a>
+                        <a href="#" class="footer__lkn" target="_blank"
+                            rel="noopener noreferrer">news@almatrends.net</a>
+                    </div>
+                    <div class="footer__col">
+                        <a href="#" class="footer__lkn" target="_blank" rel="noopener noreferrer">T. +54 9 11 2508
+                            0707</a>
+                    </div>
+                    <div class="footer__col">
+                        <a href="#" class="footer__lkn" target="_blank" rel="noopener noreferrer">
+                            <span>Martín Coronado 3260,</span>
+                            <span>Palacio Alcorta, Buenos Aires,</span>
+                            <span>Argentina.</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="footer__row">
+                    <div class="footer__col">
+                        <h4 class="footer__title">Follow us</h4>
+                    </div>
+                    <div class="footer__col">
+                        <div class="social">
+                            <a href="#" class="social__a" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                            <a href="#" class="social__a" target="_blank" rel="noopener noreferrer">Instagram</a>
+                            <a href="#" class="social__a" target="_blank" rel="noopener noreferrer">Twitter</a>
+                        </div>
+                    </div>
+                    <div class="footer__col"></div>
+                    <div class="footer__col">
+                        <span class="footer__copy">COPYRIGHT W & GUILLERMO OLIVETO©.</span>
+                    </div>
+                </div>
+
+            </div>
+        </footer>
     </main>
 
     <script>
