feat: estructura que hacemos

--- a/index.html
+++ b/index.html
@@ -125,10 +125,67 @@
         <section class="section_about">
             <div class="row">
                 <span class="section_about__text">¿Qué hacemos en W?</span>
-                <h2 class="section_about__title">Consultoría estratégica basada en evidencias</h2>
+                <h1 class="section_about__title">Consultoría estratégica basada en evidencias</h1>
             </div>
         </section>
 
+        <section class="section_how">
+            <div class="item_how">
+                <div class="row">
+                    <div class="item_how__header">
+                        <span class="item_how__label">¿Cómo lo hacemos?</span>
+                        <h2 class="item_how__title">Ejes de Trabajo W</h2>
+                    </div>
+
+                    <div class="item_how__content">
+                        <ul class="item_how__ul">
+                            <li class="item_how__li">• Consumo</li>
+                            <li class="item_how__li">• Humor social</li>
+                            <li class="item_how__li">• Contexto </li>
+                            <li class="item_how__li">• Valores de época</li>
+                            <li class="item_how__li">• Marcas</li>
+                            <li class="item_how__li">• Comunicación</li>
+                        </ul>
+
+                        <ul class="item_how__ul">
+                            <li class="item_how__li">• Mercados </li>
+                            <li class="item_how__li">• Retail</li>
+                            <li class="item_how__li">• Impacto de la política y la macroeconomía sobre el mercado </li>
+                            <li class="item_how__li">• Escenarios futuros </li>
+                            <li class="item_how__li">• Estrategias de negocio </li>
+                            <li class="item_how__li">• Tendencias globales – Almatrends Lab</li>
+                        </ul>
+                    </div>
+
+                    <ul class="pager">
+                        <li class="pager__li">
+                            <a href="#" class="pager__a" title="slide 1" rel="noopener noreferrer"></a>
+                        </li>
+                        <li class="pager__li">
+                            <a href="#" class="pager__a" title="slide 2" rel="noopener noreferrer"></a>
+                        </li>
+                        <li class="pager__li">
+                            <a href="#" class="pager__a" title="slide 3" rel="noopener noreferrer"></a>
+                        </li>
+                        <li class="pager__li">
+                            <a href="#" class="pager__a" title="slide 4" rel="noopener noreferrer"></a>
+                        </li>
+                        <li class="pager__li">
+                            <a href="#" class="pager__a" title="slide 5" rel="noopener noreferrer"></a>
+                        </li>
+                        <li class="pager__li">
+                            <a href="#" class="pager__a" title="slide 6" rel="noopener noreferrer"></a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="item_how__image">
+                    <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920" height="368"
+                        alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
+                </div>
+
+            </div>
+        </section>
 
         <footer class="footer">
             <div class="row footer-row">
