feat: estructura tags

--- a/index.html
+++ b/index.html
@@ -187,6 +187,82 @@
             </div>
         </section>
 
+        <section class="clients">
+            <div class="row">
+                <div class="clients__header">
+                    <h3 class="clients__title">Nuestros Clientes</h3>
+                    <span class="clients__label">Estrategia y tendencias desde 2010</span>
+                </div>
+            </div>
+
+            <ul class="loop_left">
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+                <li class="loop_left__li">
+                    <img src="static/dist/images/logos/1x/accenture.png" class="loop_left__img" alt="accenture"
+                        title="accenture" loading="lazy">
+                </li>
+            </ul>
+
+            <ul class="loop_left__ul">
+                <li class="loop_right__li">Agro</li>
+                <li class="loop_right__li">Alimentos</li>
+                <li class="loop_right__li">Bancos</li>
+                <li class="loop_right__li">Bebidas con Alcohol</li>
+                <li class="loop_right__li">Bebidas sin Alcohol</li>
+                <li class="loop_right__li">Belleza</li>
+                <li class="loop_right__li">Cámaras</li>
+                <li class="loop_right__li">Candidatos</li>
+                <li class="loop_right__li">Consultoría</li>
+                <li class="loop_right__li">Cosmética</li>
+                <li class="loop_right__li">Ciudades</li>
+                <li class="loop_right__li">Editorial</li>
+                <li class="loop_right__li">Educación</li>
+                <li class="loop_right__li">Empresarios</li>
+                <li class="loop_right__li">Energía</li>
+                <li class="loop_right__li">Entretenimiento</li>
+                <li class="loop_right__li">Fashion</li>
+                <li class="loop_right__li">Ferias y Exposiciones</li>
+                <li class="loop_right__li">Gobiernos</li>
+                <li class="loop_right__li">Marcas Genéricas</li>
+                <li class="loop_right__li">Medios</li>
+                <li class="loop_right__li">Real Estate</li>
+                <li class="loop_right__li">Retail</li>
+                <li class="loop_right__li">Salud</li>
+                <li class="loop_right__li">Seguros</li>
+                <li class="loop_right__li">Tarjetas de Crédito</li>
+                <li class="loop_right__li">Tecnología</li>
+                <li class="loop_right__li">Turismo</li>
+            </ul>
+
+        </section>
+
         <footer class="footer">
             <div class="row footer-row">
                 <div class="footer__row">
