feat: se agrega belive

--- a/index.html
+++ b/index.html
@@ -263,6 +263,45 @@
 
         </section>
 
+        <section class="belive">
+            <div class="row">
+
+                <div class="belive__header">
+                    <span class="belive__label">¿En qué
+                        creeemos?</span>
+                </div>
+
+                <div class="belive__content">
+                    <span class="believe__tag">7 Ideas Fuerza que estructuran nuestra Filosofía:</span>
+                    <p class="believe__text">#1. Pensar estrategicamente
+                        implica ver lo que otros no ven para hacer
+                        lo que otros no esperan que hagamos.</p>
+                </div>
+
+            </div>
+
+            <ul class="pager pager--center">
+                <li class="pager__li">
+                    <a href="#" class="pager__a" title="slide 1" rel="noopener noreferrer"></a>
+                </li>
+                <li class="pager__li">
+                    <a href="#" class="pager__a" title="slide 2" rel="noopener noreferrer"></a>
+                </li>
+                <li class="pager__li">
+                    <a href="#" class="pager__a" title="slide 3" rel="noopener noreferrer"></a>
+                </li>
+                <li class="pager__li">
+                    <a href="#" class="pager__a" title="slide 4" rel="noopener noreferrer"></a>
+                </li>
+                <li class="pager__li">
+                    <a href="#" class="pager__a" title="slide 5" rel="noopener noreferrer"></a>
+                </li>
+                <li class="pager__li">
+                    <a href="#" class="pager__a" title="slide 6" rel="noopener noreferrer"></a>
+                </li>
+            </ul>
+        </section>
+
         <footer class="footer">
             <div class="row footer-row">
                 <div class="footer__row">
