--- a/index.html
+++ b/index.html
@@ -302,6 +302,52 @@
             </ul>
         </section>
 
+        <section class="who_are">
+            <div class="row">
+                <div class="who_are__item">
+                    <figure class="who_are__figure">
+                        <img src="static/dist/images/mocks/648x907.png" alt="Guillermo Oliveto"
+                            title="Guillermo Oliveto" loading="lazy">
+                    </figure>
+                    <div class="who_are__info active">
+                        <h3 class="who_are__title">Guillermo Oliveto</h3>
+                        <div class="who_are__content who_are__feature active">
+                            <p class="who_are__txt">Licenciado en Administración de Empresas</p>
+                            <p class="who_are__txt">Fundador y CEO de Consultora W - 2010</p>
+                            <p class="who_are__txt">Especialista en consumo, humor social,
+                                <span>estrategia de marcas y comunicación.</span>
+                            </p>
+                            <button class="who_are__button" type="button">Conocer +</button>
+                        </div>
+                        <div class="who_are__content  ">
+                            <p>Licenciado en Administración de Empresas
+                                Fundador y CEO de Consultora W - 2010</p>
+                            <p>Especialista en consumo, humor social, estrategia de marcas y comunicación.
+                                Tiene más de 30 años de trayectoria profesional.</p>
+                            <p>Asesor estratégico de empresas privadas y de organizaciones del sector público.
+                                Conferencista en ámbitos ejecutivos y académicos.</p>
+                            <p>Columnista del diario La Nación para la sección “Pulso del Consumo” que se publica los
+                                lunes de
+                                manera quincenal desde el año 2017.</p>
+                            <p>Es requerido habitualmente para expresar su visión sobre el Humor Social y el Consumo en
+                                múltiples medios de difusión masiva (radio, televisión, streaming)
+                                Autor de 5 libros.</p>
+                            <p>Presidente del Comité de Contenidos del Congreso Mundial de Esomar, Montreal 2008 y del
+                                Congreso
+                                Latinoamericano, Buenos Aires 2014. Esomar es la entidad global de investigadores de
+                                mercado más
+                                importante del mundo, con más de 5000 miembros de 100 países.</p>
+                            <p>Presidente de la Asociación Argentina de Marketing ( AAM ) en el período 2007-2011 y
+                                Vicepresidente en los períodos 2003-2007 y 2011-2013
+                                Premio al Estilo Profesional de la Universidad de Palermo en 2012.</p>
+                            <button class="who_are__button" type="button">Ocultar +</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
         <footer class="footer">
             <div class="row footer-row">
                 <div class="footer__row">
