--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             </p>
                             <button class="who_are__button" type="button">Conocer +</button>
                         </div>
-                        <div class="who_are__content  ">
+                        <div class="who_are__content">
                             <p>Licenciado en Administración de Empresas
                                 Fundador y CEO de Consultora W - 2010</p>
                             <p>Especialista en consumo, humor social, estrategia de marcas y comunicación.
@@ -347,6 +347,36 @@
                 </div>
             </div>
         </section>
+
+        <section class="books">
+            <div class="row">
+                <div class="book_item">
+                    <img src="static/dist/images/books/1x/libro.webp" width="649" height="617" alt="book 1"
+                        title="book 1" loading="lazy">
+                    <button type="button" class="book_item__btn">
+                        <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 54.52 54.52">
+                            <path d="M27.26 0v54.52m27.26-27.26H0"
+                                style="fill:none;stroke:#333;stroke-miterlimit:10;stroke-width:3px" />
+                        </svg>
+                    </button>
+                </div>
+
+                <ul class="pager pager--left">
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 1" rel="noopener noreferrer"></a>
+                    </li>
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 2" rel="noopener noreferrer"></a>
+                    </li>
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 3" rel="noopener noreferrer"></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
 
         <footer class="footer">
             <div class="row footer-row">
