--- a/index.html
+++ b/index.html
@@ -376,7 +376,28 @@
             </div>
         </section>
 
+        <section class="bio">
+            <div class="row">
+                <figure class="bio__figure">
+                    <img src="static/dist/images/bio/2x/guillermo-oliveto@2x.webp" class="bio__img" width="304"
+                        height="304" alt="Guillermo oliveto" title="Guillermo oliveto" loading="lazy">
+                </figure>
+                <div class="bio__content">
+                    <div class="bio__top">
+                        <img src="static/dist/images/bio/2x/logo-lanacion@2x.webp" class="bio__top_logo" height="50"
+                            alt="logo la nacion" title="logo la nacion" loading="lazy">
+                    </div>
 
+                    <div class="bio__info">
+                        <h4 class="bio__title">Guillermo Oliveto</h4>
+                        <div class="bio__bottom">
+                            <p class="bio__text">El autor es especialista en tendencias sociales y de consumo</p>
+                            <a href="#" class="bio__link" target="_blank" rel="noopener noreferrer">Ver artículos</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <footer class="footer">
             <div class="row footer-row">
