--- a/index.html
+++ b/index.html
@@ -399,6 +399,12 @@
             </div>
         </section>
 
+
+        <div class="twitter">
+            <img src="/static/dist/images/mocks/1300x580.png" alt="bg" title="bg" loading="lazy">
+            <div class="twitter__item"></div>
+        </div>
+
         <footer class="footer">
             <div class="row footer-row">
                 <div class="footer__row">
