--- a/index.html
+++ b/index.html
@@ -401,8 +401,50 @@
 
 
         <div class="twitter">
-            <img src="/static/dist/images/mocks/1300x580.png" alt="bg" title="bg" loading="lazy">
+            <img src="static/dist/images/mocks/1300x580.png" alt="bg" title="bg" loading="lazy">
             <div class="twitter__item"></div>
+        </div>
+
+        <div class="interview">
+            <div class="row">
+                <h3 class="interview__title">Entrevistas y conferencias</h3>
+                <div class="interview__item">
+                    <figure class="interview__figure">
+                        <img src="static/dist/images/videos/1x/video1.webp" width="709" alt="El año que viene la inflación
+                        no va a bajar de 50%" title="El año que viene la inflación
+                        no va a bajar de 50%" loading="lazy">
+                    </figure>
+                    <span class="interview__date">18/11/21</span>
+                    <div class="interview__info">
+                        <h3 class="interview__subtitle">El año que viene la inflación
+                            no va a bajar de 50%</h3>
+                        <a href="#" class="interview__lkn" target="_blank" title="Ver video"
+                            rel="noopener noreferrer">Ver video</a>
+                    </div>
+                </div>
+
+                <ul class="pager pager--center">
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 1" rel="noopener noreferrer"></a>
+                    </li>
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 2" rel="noopener noreferrer"></a>
+                    </li>
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 3" rel="noopener noreferrer"></a>
+                    </li>
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 4" rel="noopener noreferrer"></a>
+                    </li>
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 5" rel="noopener noreferrer"></a>
+                    </li>
+                    <li class="pager__li">
+                        <a href="#" class="pager__a" title="slide 6" rel="noopener noreferrer"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         </div>
 
         <footer class="footer">
