--- a/index.html
+++ b/index.html
@@ -86,22 +86,12 @@
                 <a href="#" title="Logo" target="_blank" rel="noopener noreferrer">
                     <svg class="header__logo" width="110" height="68" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 110.56 68.03">
-                        <g>
-                            <g>
-                                <path
-                                    d="M98.06,4.65c0,1.93-1.69,3.48-3.78,3.48s-3.78-1.56-3.78-3.48,1.7-3.48,3.78-3.48c2.09,0,3.78,1.56,3.78,3.48Z" />
-                                <path
-                                    d="M100.1,31.35c0,1.79-1.58,3.25-3.52,3.25s-3.53-1.45-3.53-3.25,1.58-3.25,3.53-3.25c1.94,0,3.52,1.45,3.52,3.25Z" />
-                                <path
-                                    d="M110.35,7.52c-1.65-7.88-11.3-7.07-11.3-7.07v.64c2.68,0,5.54,1.17,5.79,5.59.24,4.41-5.62,7.6-7.25,8.6-1.63,1-1.6,2.48-1.6,2.48v6.85h0v1.71h1.01l.26-2.61c.49-1.25,1.88-3.51,5.67-4.79,9.61-3,7.42-11.4,7.42-11.4Z" />
-                                <polygon points="0 0 26.65 68.03 30.62 68.03 36.47 53.39 14.61 0 0 0" />
-                                <polygon points="29.68 0 56.33 68.03 60.3 68.03 66.15 53.39 44.28 0 29.68 0" />
-                                <polygon points="27.48 67.98 30.62 68.03 42.15 39.36 40.68 35.67 27.48 67.98" />
-                                <polygon points="57.89 0 52.79 13.02 54.24 16.69 60.76 0 57.89 0" />
-                                <polygon points="84.11 .39 57.37 67.98 60.51 68.03 86.99 .39 84.11 .39" />
-                            </g>
-                        </g>
+                        <path
+                            d="M98.06 4.65c0 1.93-1.69 3.48-3.78 3.48S90.5 6.57 90.5 4.65s1.7-3.48 3.78-3.48c2.09 0 3.78 1.56 3.78 3.48ZM100.1 31.35c0 1.79-1.58 3.25-3.52 3.25s-3.53-1.45-3.53-3.25 1.58-3.25 3.53-3.25c1.94 0 3.52 1.45 3.52 3.25ZM110.35 7.52C108.7-.36 99.05.45 99.05.45v.64c2.68 0 5.54 1.17 5.79 5.59.24 4.41-5.62 7.6-7.25 8.6s-1.6 2.48-1.6 2.48V26.32H97l.26-2.61c.49-1.25 1.88-3.51 5.67-4.79 9.61-3 7.42-11.4 7.42-11.4ZM0 0l26.65 68.03h3.97l5.85-14.64L14.61 0H0zM29.68 0l26.65 68.03h3.97l5.85-14.64L44.28 0h-14.6z" />
+                        <path
+                            d="m27.48 67.98 3.14.05 11.53-28.67-1.47-3.69-13.2 32.31zM57.89 0l-5.1 13.02 1.45 3.67L60.76 0h-2.87zM84.11.39 57.37 67.98l3.14.05L86.99.39h-2.88z" />
                     </svg>
+
                 </a>
                 <nav class="header__nav">
                     <a href="#" class="header__nav__a" title="¿Qué hacemos?" rel="noopener noreferrer">¿Qué hacemos?</a>
@@ -445,6 +435,40 @@
                 </ul>
             </div>
         </div>
+
+        <div class="expect">
+            <div class="row">
+                <div class="expect__content">
+                    <div class="expect__content-left">
+                        <span class="expect__content">Bienvenidos
+                            <span>a consultora W</span></span>
+                        <svg class="expect__logo" width="110" height="68" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 110.56 68.03">
+                            <path
+                                d="M98.06 4.65c0 1.93-1.69 3.48-3.78 3.48S90.5 6.57 90.5 4.65s1.7-3.48 3.78-3.48c2.09 0 3.78 1.56 3.78 3.48ZM100.1 31.35c0 1.79-1.58 3.25-3.52 3.25s-3.53-1.45-3.53-3.25 1.58-3.25 3.53-3.25c1.94 0 3.52 1.45 3.52 3.25ZM110.35 7.52C108.7-.36 99.05.45 99.05.45v.64c2.68 0 5.54 1.17 5.79 5.59.24 4.41-5.62 7.6-7.25 8.6s-1.6 2.48-1.6 2.48V26.32H97l.26-2.61c.49-1.25 1.88-3.51 5.67-4.79 9.61-3 7.42-11.4 7.42-11.4ZM0 0l26.65 68.03h3.97l5.85-14.64L14.61 0H0zM29.68 0l26.65 68.03h3.97l5.85-14.64L44.28 0h-14.6z" />
+                            <path
+                                d="m27.48 67.98 3.14.05 11.53-28.67-1.47-3.69-13.2 32.31zM57.89 0l-5.1 13.02 1.45 3.67L60.76 0h-2.87zM84.11.39 57.37 67.98l3.14.05L86.99.39h-2.88z" />
+                        </svg>
+
+                    </div>
+                    <div class="expect__content-right">
+                        <p>¿Qué hacemos?</p>
+                        <p>¿Cómo lo hacemos? </p>
+                        <p>¿En qué creemos? </p>
+                        <p>¿Quiénes somos?</p>
+                        <p>Libros </p>
+
+                    </div>
+                </div>
+                <div class="expect__bottom">
+                    <span>What</span>
+                    <span>Why</span>
+                    <span>Who</span>
+                    <span>Where</span>
+                    <span>When</span>
+                    <span>So What? </span>
+                </div>
+            </div>
         </div>
 
         <footer class="footer">
