--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
 
         <section class="section_about">
-            <div class="row">
+            <div class="row section_about__row">
                 <span class="section_about__text">¿Qué hacemos en W?</span>
                 <h1 class="section_about__title">Consultoría estratégica basada en evidencias</h1>
             </div>
@@ -121,14 +121,14 @@
 
         <section class="section_how">
             <div class="item_how">
-                <div class="row">
+                <div class="row item_how__row">
                     <div class="item_how__header">
                         <span class="item_how__label">¿Cómo lo hacemos?</span>
                         <h2 class="item_how__title">Ejes de Trabajo W</h2>
                     </div>
 
                     <div class="item_how__content">
-                        <ul class="item_how__ul">
+                        <ul class="item_how__ul item_how__ul-first">
                             <li class="item_how__li">• Consumo</li>
                             <li class="item_how__li">• Humor social</li>
                             <li class="item_how__li">• Contexto </li>
@@ -147,8 +147,8 @@
                         </ul>
                     </div>
 
-                    <ul class="pager">
-                        <li class="pager__li">
+                    <ul class="pager pager--right">
+                        <li class=" pager__li">
                             <a href="#" class="pager__a" title="slide 1" rel="noopener noreferrer"></a>
                         </li>
                         <li class="pager__li">
