--- a/index.html
+++ b/index.html
@@ -1324,20 +1324,9 @@
                         </div>
 
                     </div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination pager"></div>
                 </div>
 
-                <!-- <ul class="pager pager--left">
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 1" rel="noopener noreferrer"></a>
-                    </li>
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 2" rel="noopener noreferrer"></a>
-                    </li>
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 3" rel="noopener noreferrer"></a>
-                    </li>
-                </ul> -->
             </div>
         </section>
 
@@ -1529,7 +1518,7 @@
 
         var swiper = new Swiper('.swiper-container', {
             pagination: {
-                el: '.swiper-pagination',
+                el: '.pager',
                 clickable: true,
 
             },
