--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
     <meta property="og:url" content="https://patriciobalina.com.ar/">
 
 
-    <link rel="mask-icon" href="https://patriciobalina.com.ar/static/dist/images/apps/safari-pinned-tab.svg"
-        color="#5bbad5">
+    <link rel="mask-icon" href="static/dist/images/apps/safari-pinned-tab.svg" color="#5bbad5">
 
     <!-- facebook -->
-    <meta property="og:image" content="https://patriciobalina.com.ar/static/dist/images/apps/facebook.jpg">
+    <meta property="og:image" content="static/dist/images/apps/facebook.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
     <!-- whatsapp -->
-    <meta property="og:image" content="https://patriciobalina.com.ar/static/dist/images/apps/wsp.jpg">
+    <meta property="og:image" content="static/dist/images/apps/wsp.jpg">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
     <meta property="og:site_name" content="So What?">
@@ -58,13 +57,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#1CD3C1">
     <meta name="apple-mobile-web-app-title" content="So What?">
-    <link rel="apple-touch-icon" sizes="180x180"
-        href="https://patriciobalina.com.ar/static/dist/images/apps/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/dist/images/apps/apple-touch-icon.png">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="msapplication-TileImage" content="static/dist/images/apps/precomposed-144.png">
     <meta name="msapplication-TileColor" content="#1CD3C1">
     <meta name="theme-color" content="#ffffff">
-    <link rel="image_src" href="https://patriciobalina.com.ar/static/dist/images/apps/facebook.jpg">
+    <link rel="image_src" href="static/dist/images/apps/facebook.jpg">
     <link rel="manifest" href="manifest.json">
 
     <!-- <link rel="preload" href="static/dist/fonts/urbanist-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -1362,41 +1360,107 @@
         <div class="interview">
             <div class="row interview__row">
                 <h3 class="interview__title">Entrevistas y conferencias</h3>
-                <div class="interview__item">
-                    <figure class="interview__figure">
-                        <img src="static/dist/images/videos/1x/video1.webp" class="interview__img" width="709" alt="El año que viene la inflación
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="interview__item">
+                                <figure class="interview__figure">
+                                    <img src="static/dist/images/videos/2x/video-1@2x.webp" class="interview__img"
+                                        width="709" alt="El año que viene la inflación
                         no va a bajar de 50%" title="El año que viene la inflación
                         no va a bajar de 50%" loading="lazy">
-                    </figure>
-                    <span class="interview__date">18/11/21</span>
-                    <div class="interview__info">
-                        <h3 class="interview__subtitle">El año que viene la inflación
-                            no va a bajar de 50%</h3>
-                        <a href="#" class="interview__lkn" target="_blank" title="Ver video"
-                            rel="noopener noreferrer">Ver video</a>
+                                </figure>
+                                <span class="interview__date">18/11/21</span>
+                                <div class="interview__info">
+                                    <h3 class="interview__subtitle">El año que viene la inflación
+                                        no va a bajar de 50%</h3>
+                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="interview__item">
+                                <figure class="interview__figure">
+                                    <img src="static/dist/images/videos/2x/video-2@2x.webp" class="interview__img"
+                                        width="709" alt="La sociedad sabe que el ajuste es inevitable"
+                                        title="La sociedad sabe que el ajuste es inevitable" loading="lazy">
+                                </figure>
+                                <span class="interview__date">17/10/23</span>
+                                <div class="interview__info">
+                                    <h3 class="interview__subtitle">La sociedad sabe que el ajuste es inevitable</h3>
+                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="interview__item">
+                                <figure class="interview__figure">
+                                    <img src="static/dist/images/videos/2x/video-3@2x.webp" class="interview__img"
+                                        width="709" alt="21 Retail Day" title="Consultora W" loading="lazy">
+                                </figure>
+                                <span class="interview__date">21/06/23</span>
+                                <div class="interview__info">
+                                    <h3 class="interview__subtitle">21 Retail Day
+                                        Consultora W</h3>
+                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="interview__item">
+                                <figure class="interview__figure">
+                                    <img src="static/dist/images/videos/2x/video-4@2x.webp" class="interview__img"
+                                        width="709" alt="La sociedad sabe que el ajuste es inevitable"
+                                        title="La sociedad sabe que el ajuste es inevitable" loading="lazy">
+                                </figure>
+                                <span class="interview__date">17/10/23</span>
+                                <div class="interview__info">
+                                    <h3 class="interview__subtitle">La sociedad sabe que el ajuste es inevitable</h3>
+                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="interview__item">
+                                <figure class="interview__figure">
+                                    <img src="static/dist/images/videos/2x/video-5@2x.webp" class="interview__img"
+                                        width="709" alt="21 Retail Day Consultora W" title="21 Retail Day Consultora W"
+                                        loading="lazy">
+                                </figure>
+                                <span class="interview__date">21/06/23</span>
+                                <div class="interview__info">
+                                    <h3 class="interview__subtitle">E21 Retail Day Consultora W</h3>
+                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="interview__item">
+                                <figure class="interview__figure">
+                                    <img src="static/dist/images/videos/2x/video-6@2x.webp" class="interview__img"
+                                        width="709" alt="El análisis político de Guillermo Oliveto"
+                                        title="El análisis político de Guillermo Oliveto" loading="lazy">
+                                </figure>
+                                <span class="interview__date">10/01/24</span>
+                                <div class="interview__info">
+                                    <h3 class="interview__subtitle">El análisis político de Guillermo Oliveto</h3>
+                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
+                                        rel="noopener noreferrer">Ver video</a>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
+                    <div class="swiper-pagination pager"></div>
+
                 </div>
 
-                <ul class="pager pager--center">
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 1" rel="noopener noreferrer"></a>
-                    </li>
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 2" rel="noopener noreferrer"></a>
-                    </li>
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 3" rel="noopener noreferrer"></a>
-                    </li>
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 4" rel="noopener noreferrer"></a>
-                    </li>
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 5" rel="noopener noreferrer"></a>
-                    </li>
-                    <li class="pager__li">
-                        <a href="#" class="pager__a" title="slide 6" rel="noopener noreferrer"></a>
-                    </li>
-                </ul>
             </div>
         </div>
 
@@ -1516,7 +1580,17 @@
         });
 
 
-        var swiper = new Swiper('.swiper-container', {
+        var swiper = new Swiper('.books .swiper-container', {
+            pagination: {
+                el: '.pager',
+                clickable: true,
+
+            },
+            slidesPerView: "auto",
+            spaceBetween: 30,
+
+        });
+        var interview = new Swiper('.interview .swiper-container', {
             pagination: {
                 el: '.pager',
                 clickable: true,
